[gd_scene load_steps=4 format=2]

[ext_resource path="res://Juego/Autoloads/MusicaJuego.gd" type="Script" id=1]
[ext_resource path="res://Juego/Niveles/Musicas/musica_nivel.wav" type="AudioStream" id=2]
[ext_resource path="res://Juego/UI/sfx_boton.ogg" type="AudioStream" id=3]

[node name="MusicaJuego" type="Node"]
script = ExtResource( 1 )

[node name="MusicaNivel" type="AudioStreamPlayer" parent="."]
volume_db = -12.0
bus = "Musica"

[node name="MusicaCombate" type="AudioStreamPlayer" parent="."]
volume_db = -12.0
bus = "Musica"

[node name="MusicaMenuPrincipal" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -8.0
bus = "Musica"

[node name="BotonMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="TweenMusicaOn" type="Tween" parent="."]

[node name="TweenMusicaOff" type="Tween" parent="."]

[connection signal="tween_completed" from="TweenMusicaOff" to="." method="_on_TweenMusicaOff_tween_completed"]
